...

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <ImageButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_highTempVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_lowTempVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_currTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_currWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
...

                <TextView
                    android:id="@+id/tv_day1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_day1Temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/iv_day1Icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
...

                <TextView
                    android:id="@+id/tv_day1Weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day1High"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day1Low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_day2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_day2Temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/iv_day2Icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
...

                <TextView
                    android:id="@+id/tv_day2Weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day2High"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day2Low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_day3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_day3Temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/iv_day3Icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
...

                <TextView
                    android:id="@+id/tv_day3Weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day3High"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_day3Low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
