...
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:background="@color/night_loc"
                android:fontFamily="@font/alegreya_sans_light"/>

            <EditText
                android:id="@+id/et_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:hint="@string/et_hint"
                android:text=""
                android:gravity="center"
...
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="number"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_updateLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:fontFamily="@font/alegreya_sans"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickUpdate"
...
